# huawei-lts-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
examples/: prompts.md
references/: identity.md  safety.md  tools.md  workflows.md
scripts/: __init__.py  deploy.py  generate_tools.py  manage_install.py
src/huawei_lts_mcp/: __init__.py  adapter.py  catalog.py  client.py  config.py  errors.py  generated_catalog.json  generated_tools.py  runtime.py  schema.py  server.py
tests/: test_adapter.py  test_catalog.py  test_client.py  test_config.py  test_errors.py  test_generator.py  test_install_cli.py  test_install_manager.py  test_runtime.py  test_server.py  test_stdio_smoke.py
