[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "huawei-lts-mcp"
version = "0.1.0"
description = "Lightweight Huawei Cloud LTS MCP server and agent skill"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "mcp>=1.27,<2",
  "huaweicloudsdkcore>=3.1,<4",
  "huaweicloudsdklts>=3.1,<4",
  "cryptography>=42,<49",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
]

[project.scripts]
huawei-lts-mcp = "huawei_lts_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/huawei_lts_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["."]
